{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 88,
  "lineage": "23d479bd-c902-1bdf-2fb3-bc43ce1f5270",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:698347480743:loadbalancer/app/alb-fargate/f35ce46f4ff4d5ef",
            "arn_suffix": "app/alb-fargate/f35ce46f4ff4d5ef",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-fargate-596521097.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:698347480743:loadbalancer/app/alb-fargate/f35ce46f4ff4d5ef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-fargate",
            "security_groups": [
              "sg-02fe1c5955d6e6a8e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03b1c5e2e8f0835cd"
              },
              {
                "subnet_id": "subnet-0db85a8de2a03fe5a"
              }
            ],
            "subnets": [
              "subnet-03b1c5e2e8f0835cd",
              "subnet-0db85a8de2a03fe5a"
            ],
            "tags": {
              "Environment": "production",
              "Name": "alb-ecs-fargate"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "alb-ecs-fargate"
            },
            "vpc_id": "vpc-0bda4bf9091c752b5",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698347480743:route-table/rtb-0b610f9a053da5be4",
            "default_route_table_id": "rtb-0b610f9a053da5be4",
            "id": "rtb-0b610f9a053da5be4",
            "owner_id": "698347480743",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bda4bf9091c752b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698347480743:internet-gateway/igw-054ffe5fb7d6d6adf",
            "id": "igw-054ffe5fb7d6d6adf",
            "owner_id": "698347480743",
            "vpc_id": "vpc-0bda4bf9091c752b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-054ffe5fb7d6d6adf",
            "id": "r-rtb-06b5998331ca54d401080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06b5998331ca54d40",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698347480743:route-table/rtb-06b5998331ca54d40",
            "id": "rtb-06b5998331ca54d40",
            "owner_id": "698347480743",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-054ffe5fb7d6d6adf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bda4bf9091c752b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e44e798e01eb938",
            "route_table_id": "rtb-06b5998331ca54d40",
            "subnet_id": "subnet-03b1c5e2e8f0835cd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_integer.rand_int"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01455960d7c262587",
            "route_table_id": "rtb-06b5998331ca54d40",
            "subnet_id": "subnet-0db85a8de2a03fe5a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698347480743:security-group/sg-02fe1c5955d6e6a8e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02fe1c5955d6e6a8e",
            "ingress": [
              {
                "cidr_blocks": [
                  "99.146.166.34/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "public_sg",
            "name_prefix": "",
            "owner_id": "698347480743",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bda4bf9091c752b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698347480743:subnet/subnet-0596113cd10ecbbe0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.128.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0596113cd10ecbbe0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "698347480743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-us-east-1e-0"
            },
            "tags_all": {
              "Name": "subnet-us-east-1e-0"
            },
            "vpc_id": "vpc-0bda4bf9091c752b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_integer.rand_int"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698347480743:subnet/subnet-09323b8d6bda43197",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.128.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09323b8d6bda43197",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "698347480743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-us-east-1d-1"
            },
            "tags_all": {
              "Name": "subnet-us-east-1d-1"
            },
            "vpc_id": "vpc-0bda4bf9091c752b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698347480743:subnet/subnet-03b1c5e2e8f0835cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.128.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b1c5e2e8f0835cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "698347480743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-us-east-1e-0"
            },
            "tags_all": {
              "Name": "subnet-us-east-1e-0"
            },
            "vpc_id": "vpc-0bda4bf9091c752b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_integer.rand_int"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698347480743:subnet/subnet-0db85a8de2a03fe5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.128.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db85a8de2a03fe5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "698347480743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-us-east-1d-1"
            },
            "tags_all": {
              "Name": "subnet-us-east-1d-1"
            },
            "vpc_id": "vpc-0bda4bf9091c752b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "elliotts_aws_sandbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698347480743:vpc/vpc-0bda4bf9091c752b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.128.0.0/16",
            "default_network_acl_id": "acl-0387778889262c12f",
            "default_route_table_id": "rtb-0b610f9a053da5be4",
            "default_security_group_id": "sg-0befbefc2b54fa717",
            "dhcp_options_id": "dopt-08fb34fb1df11a273",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bda4bf9091c752b5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b610f9a053da5be4",
            "owner_id": "698347480743",
            "tags": {
              "Name": "elliott_arnold_vpc_sandbox-4"
            },
            "tags_all": {
              "Name": "elliott_arnold_vpc_sandbox-4"
            }
          },
          "dependencies": [
            "module.vpc.random_integer.rand_int"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}